# pdf2markdown4llm

./: .gitignore  LICENSE  README.md  example.py  pdf2md.py  pyproject.toml
pdf2markdown4llm/: __init__.py  cli.py  pdf2markdown4llm.py
pdf2markdown4llm/tests/: SystemConfigurationandTroubleshootingManual.md  ligatures_test1.md  ligatures_test2.md  ligatures_test3.md  ligatures_test4.md  ligatures_test5.md  test.py
