[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2markdown4llm"
version = "0.1.5"
description = "A library to convert PDF files to Markdown format."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "HawkClaws", email = "hogehoge@example.com"}
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "pdfplumber>=0.10",
]

[project.urls]
Homepage = "https://github.com/HawkClaws/pdf2markdown4llm"

[tool.setuptools.packages.find]
where = ["."]