[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2markdown4llm"
version = "0.2.0"
description = "A library to convert PDF files to Markdown format."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "HawkClaws", email = "hogehoge@example.com"}
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "pdfplumber>=0.10",
    "pillow>=9.0.0",
    "pdfminer.six[image]>=20221105",
]

[project.urls]
Homepage = "https://github.com/HawkClaws/pdf2markdown4llm"

[project.scripts]
pdf2md = "pdf2markdown4llm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
